<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieFragment"
    android:background="@color/backgroundLayout">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="180dp"

        android:layout_marginTop="@dimen/big_gap"

        android:scaleType="centerCrop"

        android:src="@drawable/star_wars"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/starwars_movie_content"/>

    <TextView
        android:id="@+id/textView2"

        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:text="@string/movie_description"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"

        android:layout_marginTop="@dimen/big_gap"

        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

    </TextView>


    <TextView

        android:id="@+id/Category"

        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/ciencia_ficcion_category"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"

        android:layout_marginTop="@dimen/small_medium_gap"
        android:layout_marginStart="@dimen/big_gap"

        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

    </TextView>


    <TextView

        android:id="@+id/MovieDescription"

        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/movie_description_full"
        android:textColor="@color/white"
        android:textSize="@dimen/small_text_size"

        android:layout_marginTop="@dimen/medium_gap"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Category">

    </TextView>

    <TextView
        android:layout_width="50dp"
        android:layout_height="wrap_content"

        android:text="@string/calification"
        android:textColor="@color/calification"
        android:textSize="24sp"
        android:textStyle="bold"


        android:layout_marginTop="@dimen/small_medium_gap"
        android:layout_marginEnd="@dimen/big_gap"

        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

    </TextView>


</androidx.constraintlayout.widget.ConstraintLayout>